2.1.5
    - Added Chinese translation thanks to Andrew Lih and Tian Fawei at Hong Kong
    University, Journalism and Media Studies Centre
    - Implemented article/section duplication feature
    - Small bug fixes

2.1.4
    - Changed the image buttons to text buttons which are easy to translate
    - Fixed bug 178: Some admin rights not added by default when admin account
    created
    - Improved the manual (2.1. Configuring the publishing environment)
    - Improved the template parser behavior: display error message when an
    invalid template was included (previously it would display an empty page)
    - Other bug fixes

2.1.3
    - Manual updates: some statements were not documented: "If Search"
    (3.9.3.22), "Print Search" (3.9.4.2), "If Subtitle" (3.9.3.23); manual
    corrections
    - Parser used to abort improperly when it couldn't resolve the allowed hosts
    name
    - Increased the maximum keyword length in the search engine
    - Fixed memory leaks (used valgrind to detect them)
    - Added Firebird specific article body field edit script
    - Modified the subtitle printing behavior: printing the field inside the
    subtitle list will display the current subtitle in the list instead of the
    subtitle set at the beginning of the template

2.1.2
    - Ported campsite to FreeBSD (thanks to Richard Airlie)
    - Started the port to OpenBSD (thanks to Richard Airlie)
    - Small bug fixes
    - Manual updates relative to the FreeBSD port
    - Manual update: 2.1.4 User management: write about the admin user and it's
    use in email notifiers
    - Small template language improvements: ability to specify the image number
    when printig image attributes (3.9.4.2 Print), accept empty strings as
    identifiers
    - Added Portuguese translation (thanks to Guilherme Henrique Soares)
    - Replaced AUTHORS with updated CREDITS file

2.1.1
    - Added new languages: Serbian (Cyrillic), Spanish, Bosnian and updated
    the other translations