@@ -1,0 +1,256 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<head>
+	
+  <meta http-equiv="CONTENT-TYPE"
+ content="text/html; charset=iso-8859-15">
+  <title></title>
+	 	
+  <meta name="GENERATOR" content="OpenOffice.org 1.0.1  (Linux)">
+	
+  <meta name="CREATED" content="20021107;14593600">
+	
+  <meta name="CHANGED" content="20030402;15595400">
+	
+  <style>
+	<!--
+		@page { size: 21.59cm 27.94cm; margin-left: 3.18cm; margin-right: 3.18cm; margin-top: 2.54cm; margin-bottom: 2.54cm }
+		P { margin-top: 0.5cm; margin-bottom: 0cm }
+		H3 { margin-bottom: 0.21cm }
+		H3.western { font-family: "Luxi Sans", sans-serif }
+		H4 { margin-bottom: 0.21cm }
+		H4.western { font-family: "Luxi Sans", sans-serif; font-size: 11pt; font-style: italic }
+		H4.cjk { font-size: 11pt; font-style: italic }
+		H4.ctl { font-size: 11pt; font-style: italic }
+	-->
+	</style>
+</head>
+<body>
+<h3>1. Viewing publications</h3>
+<h4>1.1. &#8220;You don't have permission to access file on the server&#8221;</h4>
+<p style="margin-bottom: 0.5cm;">Error message: "<i>You don't have
+permission to access /cgi-bin/tpl_cgi/look/&lt;template_name&gt; on this
+server.</i>"</p>
+<p style="margin-bottom: 0.5cm;">Explanations:</p>
+<p style="margin-top: 0cm;">a) apache configuration error: the
+ScriptAlias directory name must end in "/"</p>
+<p style="margin-bottom: 0.5cm;">From apache configuration files:</p>
+<p style="margin-top: 0cm;"># ScriptAlias: This controls which
+directories contain server scripts.</p>
+<p style="margin-top: 0cm;"># ScriptAliases are essentially the same as
+Aliases, except that</p>
+<p style="margin-top: 0cm;"># documents in the realname directory are
+treated as applications and</p>
+<p style="margin-top: 0cm;"># run by the server when requested rather
+than as documents sent to the client.</p>
+<p style="margin-top: 0cm;"># The same rules about trailing "/" apply
+to ScriptAlias directives as to</p>
+<p style="margin-top: 0cm;"># Alias.</p>
+<p># Note that if you include a trailing / on fakename then the server
+will</p>
+<p style="margin-top: 0cm;"># require it to be present in the URL. So
+"/icons" isn't aliased in this</p>
+<p style="margin-top: 0cm;"># example, only "/icons/"..</p>
+<p style="margin-top: 0cm;">Alias /icons/ /var/www/icons/</p>
+<p style="margin-bottom: 0.5cm;">Example of <b>invalid configuration</b>:</p>
+<p style="margin-top: 0cm;">ScriptAlias /cgi-bin/ /var/www/cgi-bin</p>
+<p style="margin-bottom: 0.5cm;">Example of <b>proper configuration</b>:</p>
+<p style="margin-top: 0cm;">ScriptAlias /cgi-bin/ /var/www/cgi-bin/</p>
+<p style="margin-bottom: 0.5cm;">b) apache configuration error: access
+to cgi-bin directory was not granted</p>
+<p style="margin-bottom: 0.5cm;">Example of <b>invalid configuration</b>:</p>
+<p style="margin-top: 0cm;">&lt;Directory /var/www/cgi-bin&gt;</p>
+<p style="margin-top: 0cm;">AllowOverride All</p>
+<p style="margin-top: 0cm;">Options ExecCGI</p>
+<p style="margin-top: 0cm;">&lt;/Directory&gt;</p>
+<p style="margin-bottom: 0.5cm;">Example of <b>proper configuration</b>:</p>
+<p style="margin-top: 0cm;">&lt;Directory /var/www/cgi-bin&gt;</p>
+<p style="margin-top: 0cm;">AllowOverride All</p>
+<p style="margin-top: 0cm;">Options ExecCGI</p>
+<p style="margin-top: 0cm;">Order allow,deny</p>
+<p style="margin-top: 0cm;">Allow from all</p>
+<p style="margin-top: 0cm;">&lt;/Directory&gt;</p>
+<h4>1.2. When trying to preview a publication/article I get the error:
+&#8220;Connect: connection refused by localhost&#8221;</h4>
+<p>The campsite server was not started; start it by hand issuing the
+following command as root:</p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">/usr/local/campsite/campsitectl
+start</font></p>
+<p style="margin-top: 0cm;">or </p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">/etc/rc.d/init.d/campsite
+start</font></p>
+<p style="margin-top: 0cm;">(if you have a sysV distribution: redhat,
+mandrake, suse etc.)</p>
+<p style="margin-bottom: 0.5cm;">Here &#8220;campsite&#8221; is the name of the
+instance installed. If your campsite instance has another name just
+replace campsite with your instance name. If this problem comes up after
+every reboot add the command to your rc.local file in /etc/rc.d/
+directory.</p>
+<h4>1.3. &#8220;404 Not Found&#8221;</h4>
+<p>Error message: &#8220;The requested URL [url] was not found on this
+server.&#8221;</p>
+<p style="margin-top: 0cm;">where [url] can be:</p>
+<ol>
+	<li>
+    <p style="margin-top: 0cm;">http://[host]/priv/</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">http://[host]/cgi-bin/upload_i</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">http://[host]/cgi-bin/get_img</p>
+  </li>
+</ol>
+<p style="margin-bottom: 0.5cm;">In case 1 the HTML_DIR attribute was
+not set properly at install time. This attribute must have the same
+value as the DocumentRoot attribute in the apache configuration file. If
+a virtual host was set for CAMPSITE then the HTML_DIR must be set to the
+document root of this particular host. HTML_DIR attribute is in the
+ADMIN_INTERFACE module.</p>
+<p style="margin-bottom: 0.5cm;">In cases 2 and 3 the CGI_DIR attribute
+was not set properly at install time. This attribute must have the same
+value as the ScriptAlias attribute in the apache configuration file. If
+a virtual host was set for CAMPSITE the CGI_DIR must be set to the
+script alias of this particular host. CGI_DIR attribute is in the
+ADMIN_INTERFACE module.</p>
+<h4>1.4. Warning: mysql_num_rows(): supplied argument is not a valid
+MySQL result resource in /var/www/html/priv/lib_campsite.php on line 16</h4>
+<p>This message is printed when the CAMPSITE database was corrupted or
+was not installed properly. In this case you should try to reinstall it;
+type the following commands:</p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">cd
+[campsite_source_directory]/implementation/database</font></p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">mysqladmin -u
+[user] -p drop [install_name]</font></p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">mysqladmin -u
+[user] -p drop [install_name]</font></p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">mysql -u
+[user] -p [install_name] &lt; campsite-db.sql</font></p>
+<p>You must replace:</p>
+<ul>
+	<li>
+    <p style="margin-top: 0cm;">[campsite_source_directory] with the
+	directory where you installed the campsite sources</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">[install_name] with the application
+	name you supplied at install time; the default value is &#8220;campsite&#8221;</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">[user] with a valid mysql user</p>
+  </li>
+</ul>
+<h4>1.5. When loading the login page I get the HTML page with the
+embeded php instead of a HTML page only</h4>
+<p>This happends when the php module doesn't allow short tags; in this
+case only "&lt;?php" and "&lt;script&gt;" tags are recognised. Edit
+php.ini file (usually in /etc directory), set the"short_open_tag"
+directive to "On" and restart the apache server.<br>
+</p>
+<h4>1.6. Fatal error: Failed opening required '/db_connect.php'</h4>
+<p>a). The whole error message is like:<br>
+<span style="font-weight: bold;">Fatal error: Failed opening required
+'/db_connect.php'</span><br style="font-weight: bold;">
+<span style="font-weight: bold;">(include_path='.:/usr/share/pear') in
+/var/www/html/index.php on line 10</span><br>
+</p>
+<p>The "include_path" and "index.php" may differ, depending on the
+local configuration. This error message is printed when the path to the
+"db_connect.php" file is non in the php module include path.<br>
+</p>
+<p>Fix: edit the "php.ini" file (usually in /etc directory), add the
+document root directory to the include path and restart the apache
+server. In this example the document root directory is "/var/www/html"
+and the final "include_path" directive should look like:
+"include_path='.:/usr/share/pear:/var/www/html'".<br>
+</p>
+<p>b). The whole error message is like:<br>
+<span style="font-weight: bold;">Fatal error: Failed opening required
+'/db_connect.php'</span><br style="font-weight: bold;">
+<span style="font-weight: bold;">(include_path='.:/usr/share/pear:</span><span
+ style="font-weight: bold;">/var/www/html/index.php</span><span
+ style="font-weight: bold;">') in /var/www/html/index.php on line 10</span><br>
+</p>
+<p>In this case the document root directory ("/var/www/html") is in the
+php include path but the "register_globals" directive was set to "Off".<br>
+</p>
+<p>Fix: edit the "php.ini" file, set the "register_globals" directive
+to "On" and restart the apache server.</p>
+<p> </p>
+<p> </p>
+<p style="font-weight: bold;"> </p>
+<h3>2. Installing CAMPSITE</h3>
+<h4>2.1. &#8220;executable stat not found&#8221;</h4>
+<p>The stat program was not found by the CAMPSITE install scripts. The
+package containing stat binary must be installed:</p>
+<ul>
+	<li>
+    <p style="margin-top: 0cm;">fileutils package on Mandrake</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">stat package on RedHat, Suse, Debian</p>
+  </li>
+</ul>
+<h4>2.2. &#8220;premature end of script&#8221; error</h4>
+<p style="margin-bottom: 0.5cm;">tpl_cgi keeps terminating with errors
+when it is called by campfire, and the apache error_log has a 'premature
+end of script' error.</p>
+<p style="margin-bottom: 0.5cm;">The installer does not set the cgi-bin
+directory permission properly; running the following commands will fix
+the problem:</p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">chown
+[HTTP_USER].[HTTP_GROUP] [CGI_DIR]</font></p>
+<p style="margin-top: 0cm;"><font face="Fixed, monospace">chmod 750
+[CGI_DIR]</font></p>
+<p>where [HTTP_USER] should be replaced by the apache user,
+[HTTP_GROUP] should be replaced by the apache group and [CGI_DIR] should
+be replaced by the cgi directory.</p>
+<h4>2.3 &#8220;file libmysqlclient.a not found&#8221;</h4>
+<p>MySQL development libraries were not installed or were installed in
+a non-standard directory and the CAMPSITE installer was not able to
+detect them. Install:</p>
+<ol>
+	<li>
+    <p style="margin-top: 0cm;">libmysql10-devel package on Mandrake
+	Linux</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">mysql-devel package on Redhat and 	SuSe
+Linux</p>
+  </li>
+</ol>
+<p>If MySQL was already installed from sources in a non-standard
+directory you must edit the check4_functions file in the
+[campsite_source]/.install_conf directory and add the path to
+libmysqlclient.a library to the path list in line 714:</p>
+<p>check4_file libmysqlclient.a --file --path
+"[my_path]:/usr/lib:/usr....&#8221;</p>
+<h4>2.4 &#8220;file libz.so not found&#8221;</h4>
+<p>Zlib development libraries were not installed or were installed in a
+non-standard directory and the CAMPSITE installer was not able to detect
+them. Install:</p>
+<ol start="3">
+	<li>
+    <p style="margin-top: 0cm;">zlib1-devel package on Mandrake Linux</p>
+	</li>
+  <li>
+    <p style="margin-top: 0cm;">zlib package on Redhat and SuSe Linux</p>
+  </li>
+</ol>
+<p style="margin-bottom: 0.5cm;">If the zlib package was already
+installed search for libz.so.[version] in /usr/lib directory. [version]
+is a string like: 1.1.3, 1.1.4 etc. As root type the following command:</p>
+<p style="margin-bottom: 0.5cm;"><font face="Fixed, monospace">ln -s
+/usr/lib/libz.so.[version] /usr/lib/libz.so</font></p>
+<p style="margin-bottom: 0.5cm;"><font face="Nimbus Roman No9 L">where
+[version] must be replaced by the actual library version.</font></p>
+<p style="margin-bottom: 0.5cm;">If zlib was already installed from
+sources in a non-standard directory you must edit the check4_functions
+file in the [campsite_source]/.install_conf directory and add the path
+to libz.so library to the path list in line 679:</p>
+<p style="margin-bottom: 0.5cm;">check4_file libz.so --file --path
+"[my_path]:/usr/lib:/usr/local/lib&#8221;</p>
+<p><br>
+</p>
+</body>
+</html>
