@@ -2,6 +2,7 @@
     - Added Chinese translation thanks to Andrew Lih and Tian Fawei at Hong Kong
     University, Journalism and Media Studies Centre
     - Implemented article/section duplication feature
+    - Added a technical FAQ for troubleshooting
     - Small bug fixes
 
 2.1.4
